fixed w3c validator warnings in html and removed 'align-items' at l.540

--- a/style/style.css
+++ b/style/style.css
@@ -537,7 +537,6 @@ footer .content .rubrique a{
         width: 95%;
     }
     .two .populaires .content .card{
-        align-items: center;
         width: 85%;
     }
     
